--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Gurukul Shiksha - Empowering Knowledge, Building Futures</title>
   <script type="module" crossorigin src="./assets/main-DeFGRXfN.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/style-B_HBrzss.css">
@@ -12,7 +13,7 @@
 
 
 
-
+            
 
 
 
@@ -61,7 +62,7 @@
       <span class="ml-3 text-xl">Gurukul Shiksha</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-    <a href="../index.html" class="mr-5 hover:text-gray-900">Home</a>
+    <a href="https://sauravwastaken.github.io/gurukulshiksha/" class="mr-5 hover:text-gray-900">Home</a>
       <a href="#services" class="mr-5 hover:text-gray-900">Services</a>
       <a class="mr-5 hover:text-gray-900">About us</a>
       <a href="contact.html" class="mr-5 hover:text-gray-900">Contact Us</a>
@@ -274,6 +275,8 @@ minimum educational needs and skills of human life.
     </span>
   </div>
 </footer>
-
+
+
 </body>
+
 </html>
