--- a/library.html
+++ b/library.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Library - Empowering Knowledge, Building Futures</title>
   <link rel="stylesheet" crossorigin href="./assets/style-B_HBrzss.css">
 </head>
@@ -17,8 +18,8 @@
       <span class="ml-3 text-xl">Gurukul Shiksha</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-    <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>
-      <a href="index.html#services" class="mr-5 hover:text-gray-900">Services</a>
+    <a href="https://sauravwastaken.github.io/gurukulshiksha/" class="mr-5 hover:text-gray-900">Home</a>
+      <a href="https://sauravwastaken.github.io/gurukulshiksha#services" class="mr-5 hover:text-gray-900">Services</a>
       <a class="mr-5 hover:text-gray-900">About us</a>
       <a href="contact.html" class="mr-5 hover:text-gray-900">Contact Us</a>
     </nav>
@@ -288,4 +289,5 @@
 
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 </body>
+
 </html>
