--- a/library.html
+++ b/library.html
@@ -47,9 +47,9 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto flex flex-wrap">
     <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
-      <img alt="feature" class="object-cover object-center h-full w-full" src="assets/images/library-feature-1.jpg">
+      <img alt="feature" class="object-cover object-center h-full w-full" src="./assets/library-feature-1-BHmXB9Iz.jpg">
     </div>
-    <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
+    <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center mx-auto">
       <div class="flex flex-col mb-10 lg:items-start items-center">
         <!-- <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5">
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
@@ -151,7 +151,7 @@
     <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
       <img alt="feature" class="object-cover object-center h-full w-full" src="./assets/library-feature-2-hjkXuC8X.jpg">
     </div>
-    <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
+    <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center mx-auto">
       <div class="flex flex-col mb-10 lg:items-start items-center">
         <!-- <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5">
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
@@ -160,7 +160,7 @@
         </div> -->
         <div class="flex-grow">
           <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Printing and Photocopying</h2>
-          <ul class="leading-relaxed text-base list-disc ">
+          <ul class="leading-relaxed text-base list-disc">
             <li class="ml-5">Basic print, scan, and photocopy services</li>
             <li class="ml-5">Usually available for a small fee</li>
             <li class="ml-5">Support for printing assignments, notes, or articles</li>
