--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gurukul Shiksha - Empowering Knowledge, Building Futures</title>
-  <script type="module" crossorigin src="./assets/main-DeFGRXfN.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/style-B_HBrzss.css">
+  <script type="module" crossorigin src="./assets/main-BYnjYN2X.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/style-DHACz0_s.css">
 </head>
 <body>
 
 
 
 
-            
+
 
 
 
@@ -55,14 +54,12 @@
 
 <header class="text-gray-600 body-font bg-[#f4f2ec]">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-    <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-theme_green rounded-full" viewBox="0 0 24 24">
-        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-      </svg>
+   <a href="index.html" class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+      <img class="w-16" src="./assets/logo-DYnVscpv.png" alt="logo">
       <span class="ml-3 text-xl">Gurukul Shiksha</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-    <a href="https://sauravwastaken.github.io/gurukulshiksha/" class="mr-5 hover:text-gray-900">Home</a>
+    <a href="../index.html" class="mr-5 hover:text-gray-900">Home</a>
       <a href="#services" class="mr-5 hover:text-gray-900">Services</a>
       <a class="mr-5 hover:text-gray-900">About us</a>
       <a href="contact.html" class="mr-5 hover:text-gray-900">Contact Us</a>
@@ -181,11 +178,11 @@ minimum educational needs and skills of human life.
           <!-- <h3 class="tracking-widest text-theme_orange text-xs font-medium title-font">SUBTITLE</h3> -->
           <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Computer Classes</h2>
           <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
-           <!-- <a href="computer_classes.html" class="text-theme_green inline-flex items-center mt-6">Learn More
+           <a href="computer_classes.html" class="text-theme_green inline-flex items-center mt-6">Learn More
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
-        </a> -->
+        </a>
         </div>
       </div>
        <div class="xl:w-1/4 md:w-1/2 p-4">
@@ -235,9 +232,7 @@ minimum educational needs and skills of human life.
 <footer class="text-gray-600 body-font bg-theme_primary">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-theme_green rounded-full" viewBox="0 0 24 24">
-        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-      </svg>
+     <img class="w-16" src="./assets/logo-DYnVscpv.png" alt="logo">
       <span class="ml-3 text-xl">Gurukul Shiksha</span>
     </a>
     <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2025 GurukulShiksha
@@ -275,8 +270,6 @@ minimum educational needs and skills of human life.
     </span>
   </div>
 </footer>
-
-
+
 </body>
-
 </html>
