--- a/library.html
+++ b/library.html
@@ -2,24 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library - Empowering Knowledge, Building Futures</title>
-  <link rel="stylesheet" crossorigin href="./assets/style-B_HBrzss.css">
+  <link rel="stylesheet" crossorigin href="./assets/style-DHACz0_s.css">
 </head>
 <body>
 
 <header class="text-gray-600 body-font bg-[#f4f2ec]">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-    <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-theme_green rounded-full" viewBox="0 0 24 24">
-        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-      </svg>
+    <a href="index.html" class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+      <img class="w-16" src="./assets/logo-DYnVscpv.png" alt="logo">
       <span class="ml-3 text-xl">Gurukul Shiksha</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-    <a href="https://sauravwastaken.github.io/gurukulshiksha/" class="mr-5 hover:text-gray-900">Home</a>
-      <a href="https://sauravwastaken.github.io/gurukulshiksha#services" class="mr-5 hover:text-gray-900">Services</a>
+    <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>
+      <a href="index.html#services" class="mr-5 hover:text-gray-900">Services</a>
       <a class="mr-5 hover:text-gray-900">About us</a>
       <a href="contact.html" class="mr-5 hover:text-gray-900">Contact Us</a>
     </nav>
@@ -289,5 +286,4 @@
 
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 </body>
-
 </html>
