--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <header class="text-gray-600 body-font bg-[#f4f2ec]">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-   <a href="index.html" class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+   <a href="./index.html" class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
       <img class="w-16" src="./assets/logo-DYnVscpv.png" alt="logo">
       <span class="ml-3 text-xl">Gurukul Shiksha</span>
     </a>
@@ -62,9 +62,9 @@
     <a href="../index.html" class="mr-5 hover:text-gray-900">Home</a>
       <a href="#services" class="mr-5 hover:text-gray-900">Services</a>
       <a class="mr-5 hover:text-gray-900">About us</a>
-      <a href="contact.html" class="mr-5 hover:text-gray-900">Contact Us</a>
+      <a href="./contact.html" class="mr-5 hover:text-gray-900">Contact Us</a>
     </nav>
-    <a href="contact.html" class="inline-flex items-center bg-theme_orange text-white border-0 py-1 px-3 focus:outline-none  rounded text-base mt-4 md:mt-0">Enroll now
+    <a href="./contact.html" class="inline-flex items-center bg-theme_orange text-white border-0 py-1 px-3 focus:outline-none  rounded text-base mt-4 md:mt-0">Enroll now
       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
         <path d="M5 12h14M12 5l7 7-7 7"></path>
       </svg>
