--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <span class="ml-3 text-xl">Gurukul Shiksha</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-    <a href="../index.html" class="mr-5 hover:text-gray-900">Home</a>
+    <a href="./index.html" class="mr-5 hover:text-gray-900">Home</a>
       <a href="#services" class="mr-5 hover:text-gray-900">Services</a>
       <a class="mr-5 hover:text-gray-900">About us</a>
       <a href="./contact.html" class="mr-5 hover:text-gray-900">Contact Us</a>
