--- a/academic_classes.html
+++ b/academic_classes.html
@@ -44,7 +44,7 @@ future careers.</p>
       </div>
       <div class="sm:w-1/2 mb-10 px-4">
         <div class="rounded-lg h-[400px] overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full -scale-x-100" src="./assets/competitive-1yar1moe.jpg">
+          <img alt="content" class="object-cover object-center h-full w-full -scale-x-100" src="./assets/competitive-Cp5De1Xm.webp">
         </div>
         <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Competitive Exams: SSC, Banking, Railways, UPSC, State PCS</h2>
         <p class="leading-relaxed text-base">Preparation of subjects like General Awareness, Quantitative Aptitude, Reasoning, and
