--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
     </div>
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 ">
-      <img class="object-cover object-center rounded-lg" alt="hero" src="./assets/hero-DA55pCCL.png">
+      <img class="object-cover object-center rounded-lg" alt="hero" src="./assets/hero-HcCQhZMz.webp">
     </div>
   </div>
 </section>
@@ -174,7 +174,7 @@ minimum educational needs and skills of human life.
     <div class="flex flex-wrap -m-4">
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-theme_primary p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://images.pexels.com/photos/18471480/pexels-photo-18471480.jpeg" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="./assets/service-3-V7IT9ILk.jpeg" alt="content">
           <!-- <h3 class="tracking-widest text-theme_orange text-xs font-medium title-font">SUBTITLE</h3> -->
           <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Computer Classes</h2>
           <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
@@ -187,7 +187,7 @@ minimum educational needs and skills of human life.
       </div>
        <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-theme_primary p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="./assets/service-2-Bhf6LsFD.jpg" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="./assets/service-2-BwhGB9Cm.jpg" alt="content">
           <!-- <h3 class="tracking-widest text-theme_orange text-xs font-medium title-font">SUBTITLE</h3> -->
           <h2 class="text-lg text-gray-900 font-medium title-font mb-4 ">Library Facilities</h2>
           <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
